--- a/1_EDA.ipynb
+++ b/1_EDA.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,15 +51,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exploro comportamiento de variables y presencia de outliers\n",
+    "\n",
+    "# df_hom_hech[\"N_VICTIMAS\"].value_counts() # OK\n",
+    "# df_hom_hech[\"AAAA\"].value_counts() # OK\n",
+    "# df_hom_hech[\"MM\"].value_counts() # OK\n",
+    "# df_hom_hech[\"DD\"].max() # OK\n",
+    "# df_hom_hech[\"HORA\"].max() # Se encuentra que existe un \"SD\" referente a sin datos.\n",
+    "# df_hom_hech[\"HH\"].min() # Se encuentra que existe un \"SD\" referente a sin datos.\n",
+    "# df_hom_hech[\"TIPO_DE_CALLE\"].value_counts() # OK\n",
+    "# df_hom_hech[\"COMUNA\"].value_counts() # Hay dos con comuna 0\n",
+    "# df_hom_hech[\"PARTICIPANTES\"].value_counts() # Hay muchos SD por tratar. El resto OK\n",
+    "# df_hom_hech[\"VICTIMA\"].value_counts() # Hay uno por analizar que dice PEATON_MOTO\n",
+    "# df_hom_hech[\"ACUSADO\"].value_counts() # OK"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1. ETL de hom_hech_df"
+    "#### 1. Limpieza (?) de hom_hech_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -603,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -616,7 +637,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -627,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -637,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -658,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +692,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -682,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -939,6 +960,112 @@
    "source": [
     "display(hom_hech_df)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "715"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hom_hech_df[\"N_VICTIMAS\"].sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1. Limpieza (?) de hom_vic_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cantidad de Filas y columnas: (717, 10)\n",
+      "Nombre columnas: Index(['ID_hecho', 'FECHA', 'AAAA', 'MM', 'DD', 'ROL', 'VICTIMA', 'SEXO',\n",
+      "       'EDAD', 'FECHA_FALLECIMIENTO'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Explorar filas y columnas\n",
+    "\n",
+    "print('Cantidad de Filas y columnas:',hom_vic_df.shape)\n",
+    "print('Nombre columnas:',hom_vic_df.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 717 entries, 0 to 716\n",
+      "Data columns (total 10 columns):\n",
+      " #   Column               Non-Null Count  Dtype \n",
+      "---  ------               --------------  ----- \n",
+      " 0   ID_hecho             717 non-null    object\n",
+      " 1   FECHA                717 non-null    object\n",
+      " 2   AAAA                 717 non-null    int64 \n",
+      " 3   MM                   717 non-null    int64 \n",
+      " 4   DD                   717 non-null    int64 \n",
+      " 5   ROL                  717 non-null    object\n",
+      " 6   VICTIMA              717 non-null    object\n",
+      " 7   SEXO                 717 non-null    object\n",
+      " 8   EDAD                 717 non-null    object\n",
+      " 9   FECHA_FALLECIMIENTO  717 non-null    object\n",
+      "dtypes: int64(3), object(7)\n",
+      "memory usage: 56.1+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exploro datos faltantes\n",
+    "\n",
+    "hom_vic_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Número de registros duplicados: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Verificar si hay duplicados en el DataFrame\n",
+    "duplicados = hom_vic_df.duplicated()\n",
+    "\n",
+    "# Contar el número de registros duplicados\n",
+    "print(f\"Número de registros duplicados: {duplicados.sum()}\")\n"
+   ]
   }
  ],
  "metadata": {
@@ -957,7 +1084,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
